Fix "superuser_missing" check (issue #3)

--- a/roles/rdmo-venv/tasks/configure-rdmo.yml
+++ b/roles/rdmo-venv/tasks/configure-rdmo.yml
@@ -50,5 +50,4 @@
     app_path: "{{ rdmo_app_dir }}"
     virtualenv: "{{ rdmo_env_dir }}"
   ignore_errors: True
-  when: superuser_missing | bool
-
+  when: superuser_missing.stdout | bool
