Always restart the rdmo/gunicorn systemd unit when the ansible playbook is executed

--- a/roles/rdmo-venv/tasks/start-rdmo.yml
+++ b/roles/rdmo-venv/tasks/start-rdmo.yml
@@ -6,5 +6,5 @@
 - name: Make sure rdmo.service is started
   systemd:
     name: "{{ rdmo_user }}.service"
-    state: started
+    state: restarted
     enabled: yes
